Refactored the layout issues of the app

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 @layer utilities {
@@ -91,5 +93,24 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 100%;
+}
+
+.video-container iframe {
+  width: 60%;
+  height: 30vw; /* Default height for small screens */
+}
+
+@media (min-width: 768px) {
+  .video-container iframe {
+    height: 25vw; /* Height for medium and larger screens */
   }
 }
